# swissgeo

./: .travis.yml  LICENSE  README.md  hie.yaml  newghc  stack.yaml  swissgeo.cabal
src/Data/Geo/Swiss/: Conversion.hs
tests/: Main.hs
